--- a/style.css
+++ b/style.css
@@ -8,10 +8,86 @@
   --hireRed: #c36a69;
   --black: #000000;
 }
+
+/*************************************************************************/
+/******************************* BASE ***********************************/
+/***********************************************************************/
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+body,
+html {
+  overflow-x: hidden;
+}
+
+body {
+  font-family: "Gill Sans", sans-serif;
+}
+
+.header,
+.container,
+.hero-section,
+.swipe,
+.match,
+.profil,
+.download {
+  height: 100vh;
+}
+
+ul,
+.nav-content {
+  list-style-type: none;
+}
+
+a {
+  text-decoration: none;
+}
+
+.section-content p {
+  margin-top: 1rem;
+}
+
+h2 {
+  font-size: calc(0.9rem + 2vw);
+  font-weight: 900;
+}
+
+h3 {
+  font-size: calc(0.5rem + 2.5vw);
+  text-align: center;
+}
+
+p {
+  font-size: calc(0.5rem + 1.2vw);
+}
+
+#diamond {
+  position: fixed;
+  top: 60%;
+  left: 50%;
+  transform: translate(-50%, -50%) rotate(45deg);
+  width: 22vw; /* Change ici */
+  height: 22vw; /* Change ici */
+  background-color: rgba(105, 194, 195, 0.09);
+  z-index: -1;
+  transition: all 0.2s;
+}
+
+@media (max-width: 768px) {
+  #diamond {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) rotate(45deg);
+    width: 40vw; /* Change ici */
+    height: 40vw; /* Change ici */
+    background-color: rgba(105, 194, 195, 0.09);
+    z-index: -1;
+    transition: all 0.2s;
+  }
 }
 
 /*************************************************************************/
@@ -39,145 +115,435 @@
   font-style: normal;
 }
 
-body,
-html {
-  overflow-x: hidden;
-}
-
-body {
-  font-family: "Gill Sans", sans-serif;
-}
-
-.header,
-.container {
-  height: 100vh;
-}
-
-.nav {
+/*************************************************************************/
+/****************************** LOADER **********************************/
+/***********************************************************************/
+#loader {
   position: fixed;
+  top: 0;
+  left: 0;
   width: 100%;
-  height: 100px;
+  height: 100%;
+  background: #84e7e9;
+  z-index: 9999;
+  overflow-y: hidden; /* Cache la barre de défilement */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#loader-logo {
+  width: 70%; /* ou la taille que tu veux */
+  height: auto;
+}
+
+/*************************************************************************/
+/****************************** HEADER **********************************/
+/***********************************************************************/
+
+/****************************** NAV ************************************/
+nav {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 0 4em;
-  background: #fff;
-  z-index: 999;
-}
-
-a {
-  text-decoration: none;
-  text-transform: uppercase;
-  color: black;
-  padding: 0 1em;
-  font-weight: 500;
-  font-size: 0.75rem;
+  padding: 0.4rem 2rem;
+  transition: background-color 0.8s ease;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 1000;
 }
 
 .logo {
-  position: fixed;
-  top: 0;
-  left: 50%;
-  transform: translateX(-50%);
-  padding: 1em;
-  z-index: 1000;
-  /*A modifier pour placer le titre en mini ou je veux*/
-  width: 180px;
+  width: 12%;
 }
 
 .logo img {
-  max-width: 10%;
+  width: 100%;
+  height: 100%;
 }
 
-.container {
+.nav-scrolled {
+  background: rgb(200 254 255 / 65%);
+  backdrop-filter: blur(
+    10px
+  ); /* Floue le contenu derrière la barre de navigation */
+  -webkit-backdrop-filter: blur(10px); /* Pour le support Safari */
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Ombre légère, facultatif */
+}
+
+.btnApp {
+  padding: 0.8rem;
+  border-radius: 50px;
+  background: none;
+  font-size: calc(0.4rem + 0.5vw);
+  font-weight: 900;
+}
+
+@media (max-width: 576px) {
+  .logo {
+    width: 30%;
+  }
+}
+
+/****************************** HERO ************************************/
+
+.hero-section {
+  display: flex;
+  align-items: center;
+  max-width: 75%;
+  margin: 0 auto;
+  height: 100vh;
+}
+
+.hero-img {
+  width: 70%;
+  height: auto;
+}
+
+.hero-img img {
   width: 100%;
-  background: #fff;
+  height: 100%;
+}
+
+.hero-content h1 {
+  font-size: calc(1rem + 2.8vw);
+}
+
+.container-badges {
+  display: flex;
+  align-items: center;
+  margin-top: 2rem;
+  gap: 2rem;
+}
+
+.badges {
+  width: 130px;
+  height: auto;
+}
+
+.badges:hover {
+  transition: 0.5s;
+  transform: scale(1.05);
+}
+
+/* Responsive */
+
+@media (max-width: 768px) {
+  .hero-section {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    max-width: 80%;
+    padding: 2rem;
+  }
+
+  .hero-img {
+    width: 40%;
+    height: auto;
+  }
+
+  .hero-content {
+    text-align: center;
+    font-size: 2vw;
+    margin-top: 2rem;
+  }
+
+  .container-badges {
+    justify-content: center;
+  }
+
+  .badges {
+    width: 120px;
+  }
+}
+
+@media (max-width: 576px) {
+  .hero-img {
+    width: 65%;
+  }
 }
 
 /*************************************************************************/
 /****************************** MAIN ************************************/
 /***********************************************************************/
 
-section {
+/**************************** SWIPE SECTION ********************************/
+
+.container-section {
+  display: flex;
+  align-items: center;
+  max-width: 75%;
+  margin: 0 auto;
+  height: 100vh;
+}
+
+.swipe .section-img {
   position: relative;
+  width: 60%;
+  height: auto;
+}
+
+.swipe .section-img img:first-child {
   width: 100%;
-  min-height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  height: auto;
+  z-index: 1;
 }
 
-.container__app__content {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 3rem;
-}
-
-section .reveal {
-  position: relative;
-  font-size: 3vw;
-  padding: 0 10px;
-  font-weight: 500;
-  transform-origin: left;
-  transform: scaleX(0);
-  transition: 0.5s;
-  transition-delay: 0s;
-  line-height: 2;
-}
-
-section .reveal.active {
-  transform: scaleX(1);
-  transition-delay: 0s;
-}
-
-section .reveal:before {
-  content: "";
+.swipe .section-img img:last-child {
   position: absolute;
   top: 0;
-  left: 0;
+  left: 4.5%;
+  width: 90%;
+  height: auto;
+  z-index: 2;
+}
+
+/* Responsive */
+
+@media (max-width: 768px) {
+  .container-section {
+    flex-direction: column-reverse;
+    align-items: center;
+    justify-content: center;
+    max-width: 80%;
+    padding: 2rem;
+  }
+
+  .swipe .section-img {
+    width: 50%;
+    height: auto;
+  }
+
+  .section-content {
+    text-align: center;
+    font-size: 2.5vw;
+    margin-top: 2rem;
+  }
+}
+
+@media (max-width: 576px) {
+  .swipe .section-img {
+    width: 65%;
+  }
+}
+
+/**************************** MATCH SECTION ********************************/
+.match .container-section {
+  gap: 2rem;
+  height: 100vh;
+}
+
+.match .section-img {
+  width: 80%;
+}
+
+.match .section-img img {
+  width: 100%;
+  height: 90%;
+}
+
+/* Responsive */
+
+@media (max-width: 768px) {
+  .match .container-section {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    max-width: 80%;
+    padding: 2rem;
+    gap: 0rem;
+  }
+
+  .match .section-content {
+    margin-top: 0;
+  }
+
+  .match .section-img {
+    width: 35%;
+  }
+}
+
+@media (max-width: 576px) {
+  .match .section-img {
+    width: 70%;
+  }
+}
+
+/**************************** PROFIL SECTION ********************************/
+.profil .container-section {
+  gap: 2rem;
+}
+
+.profil .section-img {
+  width: 80%;
+}
+
+.profil .section-img img {
   width: 100%;
   height: 100%;
-  background: var(--darkBlue);
-  transform-origin: right;
-  transition: 0.5s;
-  transition-delay: 0s;
-}
-/* section .reveal:nth-child(2):before {
-  background: yellow;
-} */
-
-section .reveal.active:before {
-  transform: scaleX(0);
-  transition-delay: 0s;
 }
 
-.container__app__img {
-  width: 100%;
-}
+/* Responsive */
 
-.container__app__img img {
-  position: relative;
-  left: -500px;
-  display: block;
-  margin-left: 10px;
-  margin-top: 20px;
-  width: 100%;
-  height: 100%;
-  opacity: 0;
-  transition: 0.5s;
+@media (max-width: 768px) {
+  .profil .section-img {
+    width: 50%;
+  }
 }
-
-section img.active {
-  left: 0;
-  opacity: 1;
+@media (max-width: 576px) {
+  .profil .section-img {
+    width: 70%;
+  }
 }
 
 /*************************************************************************/
-/****************************** CONTACT *********************************/
+/************************** DOWNLOAD SECTION ****************************/
 /***********************************************************************/
 
 .contact {
   height: 100vh;
-  background: rgb(231, 231, 231);
+  background: rgb(105, 194, 195);
+  background: linear-gradient(
+    141deg,
+    rgba(105, 194, 195, 1) 20%,
+    rgba(190, 221, 205, 1) 47%,
+    rgba(105, 194, 195, 1) 75%
+  );
+  /* background-image: url(./images/techHire.jpg);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat; */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.contact-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 70%;
+  margin: 0 auto;
+}
+
+.contact-content h3 {
+  font-size: 4vw;
+  padding: 1rem;
+}
+
+.contact-content span {
+  font-weight: 900;
+  font-family: "ciabatta", sans-serif;
+  color: #a3fcfd;
+}
+
+.contactImg-container {
+  width: 30%;
+  object-fit: cover;
+}
+.contactImg-container img {
+  width: 100%;
+  height: 100%;
+}
+
+.contact-badges {
+  margin: 0 auto;
+}
+
+.contact-badges img {
+  width: 200px;
+}
+
+/* Responsive */
+
+@media (max-width: 768px) {
+  .profil .section-img {
+    width: 50%;
+  }
+}
+@media (max-width: 576px) {
+  .contact-badges img {
+    width: 100px;
+  }
+
+  .contactImg-container {
+    width: 50%;
+    object-fit: cover;
+  }
+
+  .contact-content h3 {
+    font-size: 5vw;
+    padding: 1rem;
+  }
+}
+
+/*************************************************************************/
+/******************************* FOOTER *********************************/
+/***********************************************************************/
+.container-footer {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  flex-direction: column;
+  height: 90vh;
+}
+.footer-logo {
+  width: 40%;
+}
+.footer-content {
+  width: 50%;
+  text-align: center;
+}
+.footer-content ul {
+  list-style-type: none;
+}
+.footer-content ul li {
+  margin: 1rem;
+}
+
+.footer-content i {
+  padding-right: 1rem;
+}
+
+.footer-logo img {
+  width: 100%;
+  height: 100%;
+}
+
+/* Made By*/
+
+.madeBy {
+  background: black;
+  color: white;
+  text-align: center;
+  padding: 1rem;
+}
+
+.madeBy a {
+  color: white;
+}
+
+.madeContent span {
+  color: var(--darkBlue);
+}
+
+.law {
+  text-decoration: none;
+  color: red;
+  padding-top: 1rem;
+}
+
+.back-to-top {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  padding: 10px 15px;
+  background-color: var(--darkBlue);
+  color: white;
+  border-radius: 5px;
+  cursor: pointer;
+  display: none; /* caché par défaut */
+  border: none;
 }
