--- a/style.css
+++ b/style.css
@@ -37,6 +37,16 @@ body {
   height: 100vh;
 }
 
+/*** Responsive****/
+/* @media (max-width: 576px) {
+  .swipe,
+  .match,
+  .profil,
+  .download {
+    height: 90vh;
+  }
+} */
+
 ul,
 .nav-content {
   list-style-type: none;
@@ -207,7 +217,7 @@ nav {
 }
 
 .hero-content h1 {
-  font-size: calc(1rem + 2.8vw);
+  font-size: calc(1.1rem + 2.8vw);
 }
 
 .container-badges {
