--- a/style.css
+++ b/style.css
@@ -98,6 +98,14 @@ p {
     z-index: -1;
     transition: all 0.2s;
   }
+
+  h2 {
+    font-size: calc(1.1rem + 2vw);
+  }
+
+  p {
+    font-size: calc(0.6rem + 1.2vw);
+  }
 }
 
 /*************************************************************************/
@@ -316,19 +324,18 @@ nav {
     flex-direction: column-reverse;
     align-items: center;
     justify-content: center;
-    max-width: 100%;
+    max-width: 85%;
     padding: 2rem;
   }
 
   .swipe .section-img {
-    width: 50%;
+    width: 35%;
     height: auto;
   }
 
   .section-content {
     text-align: center;
-    font-size: 2.5vw;
-    margin-top: 2rem;
+    margin-top: 1rem;
   }
 }
 
@@ -363,7 +370,7 @@ nav {
     max-width: 80%;
     padding: 2rem;
     gap: 0rem;
-    max-width: 100%;
+    max-width: 85%;
   }
 
   .match .section-content {
@@ -399,11 +406,11 @@ nav {
 
 @media (max-width: 768px) {
   .profil .container-section {
-    max-width: 100%;
+    max-width: 85%;
   }
 
   .profil .section-img {
-    width: 100%;
+    width: 35%;
   }
 }
 @media (max-width: 576px) {
