--- a/style.css
+++ b/style.css
@@ -74,6 +74,12 @@ p {
   font-size: calc(0.8rem + 1.2vw);
 }
 
+span {
+  font-weight: 900;
+  font-family: "ciabatta", sans-serif;
+  color: var(--darkBlue);
+}
+
 #diamond {
   position: fixed;
   top: 60%;
@@ -106,6 +112,51 @@ p {
   p {
     font-size: calc(0.6rem + 1.2vw);
   }
+}
+
+.cb-tagreel {
+  position: relative;
+}
+
+.cb-tagreel-content {
+  padding: 50px 0;
+}
+
+.cb-tagreel-items {
+  margin: 8px 0;
+  overflow: hidden;
+  cursor: default;
+  background: black;
+}
+
+.cb-tagreel-row {
+  display: flex;
+  position: relative;
+  text-align: center;
+  white-space: nowrap;
+}
+
+.cb-tagreel-item {
+  position: relative;
+  font-size: calc(1.2rem + 5vw);
+  flex: 0 0 33%;
+  padding: 1.5rem;
+}
+.cb-tagreel-item img {
+  width: 100%;
+}
+
+.cb-tagreel-item.-stroke {
+  color: transparent;
+  text-shadow: none;
+  -webkit-text-stroke: 2px rgba(0, 0, 0, 0.2);
+}
+
+.cb-tagreel-item span {
+  position: relative;
+  display: inline-block;
+  z-index: 1;
+  color: white;
 }
 
 /*************************************************************************/
@@ -190,12 +241,17 @@ nav {
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Ombre légère, facultatif */
 }
 
+.btnApp-container a {
+  color: black;
+}
+
 .btnApp {
   padding: 0.8rem;
   border-radius: 50px;
   background: none;
   font-size: calc(0.6rem + 0.5vw);
   font-weight: 900;
+  border: 1px solid black;
 }
 
 @media (max-width: 576px) {
@@ -560,7 +616,7 @@ nav {
   bottom: 20px;
   right: 20px;
   padding: 10px 15px;
-  background-color: var(--darkBlue);
+  background-color: #569b9c;
   color: white;
   border-radius: 5px;
   cursor: pointer;
