--- a/style.css
+++ b/style.css
@@ -1,675 +1,1 @@
-/*************************************************************************/
-/*************************** VARIABLE CSS *******************************/
-/***********************************************************************/
-:root {
-  /*** Graphic Chart ***/
-  --darkBlue: #69c2c3;
-  --lightBlue: #beddcd;
-  --hireRed: #c36a69;
-  --black: #000000;
-}
-
-/*************************************************************************/
-/******************************* BASE ***********************************/
-/***********************************************************************/
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-body,
-html {
-  overflow-x: hidden;
-}
-
-body {
-  font-family: "Gill Sans", sans-serif;
-}
-
-.header,
-.container,
-.hero-section,
-.swipe,
-.match,
-.profil,
-.download {
-  height: 100vh;
-}
-
-/*** Responsive****/
-/* @media (max-width: 576px) {
-  .swipe,
-  .match,
-  .profil,
-  .download {
-    height: 90vh;
-  }
-} */
-
-ul,
-.nav-content {
-  list-style-type: none;
-}
-
-a {
-  text-decoration: none;
-}
-
-.section-content p {
-  margin-top: 1rem;
-}
-
-h2 {
-  font-size: calc(1.3rem + 2vw);
-  font-weight: 900;
-}
-
-h3 {
-  font-size: calc(0.5rem + 2.5vw);
-  text-align: center;
-}
-
-p {
-  font-size: calc(0.8rem + 1.2vw);
-}
-
-span {
-  font-weight: 900;
-  font-family: "ciabatta", sans-serif;
-  color: var(--darkBlue);
-}
-
-#diamond {
-  position: fixed;
-  top: 60%;
-  left: 50%;
-  transform: translate(-50%, -50%) rotate(45deg);
-  width: 22vw; /* Change ici */
-  height: 22vw; /* Change ici */
-  background-color: rgba(105, 194, 195, 0.09);
-  z-index: -1;
-  transition: all 0.2s;
-}
-
-@media (max-width: 768px) {
-  #diamond {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%) rotate(45deg);
-    width: 40vw; /* Change ici */
-    height: 40vw; /* Change ici */
-    background-color: rgba(105, 194, 195, 0.09);
-    z-index: -1;
-    transition: all 0.2s;
-  }
-
-  h2 {
-    font-size: calc(1.1rem + 2vw);
-  }
-
-  p {
-    font-size: calc(0.6rem + 1.2vw);
-  }
-}
-
-/** Bandes noires **/
-
-.cb-tagreel {
-  position: relative;
-}
-
-.cb-tagreel-content {
-  padding: 50px 0;
-}
-
-.cb-tagreel-items {
-  margin: 8px 0;
-  overflow: hidden;
-  cursor: default;
-  background: black;
-}
-
-.cb-tagreel-row {
-  display: flex;
-  position: relative;
-  text-align: center;
-  white-space: nowrap;
-}
-
-.cb-tagreel-item {
-  position: relative;
-  font-size: calc(1.2rem + 5vw);
-  flex: 0 0 33%;
-  padding: 1.5rem;
-}
-.cb-tagreel-item img {
-  width: 100%;
-}
-
-.cb-tagreel-item.-stroke {
-  color: transparent;
-  text-shadow: none;
-  -webkit-text-stroke: 2px rgba(0, 0, 0, 0.2);
-}
-
-.cb-tagreel-item span {
-  position: relative;
-  display: inline-block;
-  z-index: 1;
-  color: white;
-}
-
-/*************************************************************************/
-/****************************** FONTS ***********************************/
-/***********************************************************************/
-
-@font-face {
-  font-family: "ciabatta";
-  src: url("./polices/ciabatta.woff") format("woff");
-  font-weight: bold;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: "Gill Sans";
-  src: url("./polices/GillSans.woff") format("woff");
-  font-weight: normal;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: "Gill Sans";
-  src: url("./polices/GillSans.woff") format("woff");
-  font-weight: bold;
-  font-style: normal;
-}
-
-/*************************************************************************/
-/****************************** LOADER **********************************/
-/***********************************************************************/
-#loader {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: var(--darkBlue);
-  z-index: 9999;
-  overflow: hidden;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.bar {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  width: 20%;
-  background: white;
-}
-
-.bar:nth-child(1) {
-  left: 0%;
-}
-.bar:nth-child(2) {
-  left: 20%;
-}
-.bar:nth-child(3) {
-  left: 40%;
-}
-.bar:nth-child(4) {
-  left: 60%;
-}
-.bar:nth-child(5) {
-  left: 80%;
-}
-.bar:nth-child(6) {
-  left: 100%;
-}
-
-/*************************************************************************/
-/****************************** HEADER **********************************/
-/***********************************************************************/
-
-/****************************** NAV ************************************/
-nav {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 0.4rem 2rem;
-  transition: background-color 0.8s ease;
-  position: fixed;
-  top: 0;
-  width: 100%;
-  z-index: 1000;
-}
-
-.logo {
-  width: 12%;
-}
-
-.logo img {
-  width: 100%;
-  height: 100%;
-}
-
-.nav-scrolled {
-  background: rgb(200 254 255 / 65%);
-  backdrop-filter: blur(
-    10px
-  ); /* Floue le contenu derrière la barre de navigation */
-  -webkit-backdrop-filter: blur(10px); /* Pour le support Safari */
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Ombre légère, facultatif */
-}
-
-.btnApp-container a {
-  color: black;
-}
-
-.btnApp-container:hover a {
-  background: var(--darkBlue);
-  color: white;
-  transition: 0.5s;
-}
-
-.btnApp {
-  padding: 0.8rem;
-  border-radius: 50px;
-  background: none;
-  font-size: calc(0.6rem + 0.5vw);
-  font-weight: 900;
-  border: 1px solid black;
-}
-
-@media (max-width: 576px) {
-  .logo {
-    width: 30%;
-  }
-}
-
-/****************************** HERO ************************************/
-
-.hero-section {
-  display: flex;
-  align-items: center;
-  max-width: 75%;
-  margin: 0 auto;
-  height: 100vh;
-}
-
-.hero-img {
-  width: 70%;
-  height: auto;
-}
-
-.hero-img img {
-  width: 100%;
-  height: 100%;
-}
-
-.hero-content h1 {
-  font-size: calc(1.1rem + 2.8vw);
-}
-
-.container-badges {
-  display: flex;
-  align-items: center;
-  margin-top: 2rem;
-  gap: 2rem;
-}
-
-.badges {
-  width: 130px;
-  height: auto;
-}
-
-.badges:hover {
-  transition: 0.5s;
-  transform: scale(1.05);
-}
-
-/* Responsive */
-
-@media (max-width: 768px) {
-  .hero-section {
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    max-width: 80%;
-    padding: 2rem;
-  }
-
-  .hero-img {
-    width: 40%;
-    height: auto;
-  }
-
-  .hero-content {
-    text-align: center;
-    font-size: 2vw;
-    margin-top: 2rem;
-  }
-
-  .container-badges {
-    justify-content: center;
-  }
-
-  .badges {
-    width: 120px;
-  }
-}
-
-@media (max-width: 576px) {
-  .hero-img {
-    width: 80%;
-  }
-}
-
-/*************************************************************************/
-/****************************** MAIN ************************************/
-/***********************************************************************/
-
-/**************************** SWIPE SECTION ********************************/
-
-.container-section {
-  display: flex;
-  align-items: center;
-  max-width: 75%;
-  margin: 0 auto;
-  height: 100vh;
-}
-
-.swipe .section-img {
-  position: relative;
-  width: 60%;
-  height: auto;
-}
-
-.swipe .section-img img:first-child {
-  width: 100%;
-  height: auto;
-  z-index: 1;
-}
-
-.swipe .section-img img:last-child {
-  position: absolute;
-  top: 0;
-  left: 4.5%;
-  width: 90%;
-  height: auto;
-  z-index: 2;
-}
-
-/* Responsive */
-
-@media (max-width: 768px) {
-  .container-section {
-    flex-direction: column-reverse;
-    align-items: center;
-    justify-content: center;
-    max-width: 85%;
-    padding: 2rem;
-  }
-
-  .swipe .section-img {
-    width: 35%;
-    height: auto;
-  }
-
-  .section-content {
-    text-align: center;
-    margin-top: 1rem;
-  }
-}
-
-@media (max-width: 576px) {
-  .swipe .section-img {
-    width: 100%;
-  }
-}
-
-/**************************** MATCH SECTION ********************************/
-.match .container-section {
-  gap: 2rem;
-  height: 100vh;
-}
-
-.match .section-img {
-  width: 80%;
-}
-
-.match .section-img img {
-  width: 100%;
-  height: 90%;
-}
-
-/* Responsive */
-
-@media (max-width: 768px) {
-  .match .container-section {
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    max-width: 80%;
-    padding: 2rem;
-    gap: 0rem;
-    max-width: 85%;
-  }
-
-  .match .section-content {
-    margin-top: 0;
-  }
-
-  .match .section-img {
-    width: 35%;
-  }
-}
-
-@media (max-width: 576px) {
-  .match .section-img {
-    width: 100%;
-  }
-}
-
-/**************************** PROFIL SECTION ********************************/
-.profil .container-section {
-  gap: 2rem;
-}
-
-.profil .section-img {
-  width: 80%;
-}
-
-.profil .section-img img {
-  width: 100%;
-  height: 100%;
-}
-
-/* Responsive */
-
-@media (max-width: 768px) {
-  .profil .container-section {
-    max-width: 85%;
-  }
-
-  .profil .section-img {
-    width: 35%;
-  }
-}
-@media (max-width: 576px) {
-  .profil .section-img {
-    width: 100%;
-  }
-}
-
-/*************************************************************************/
-/************************** DOWNLOAD SECTION ****************************/
-/***********************************************************************/
-
-.contact {
-  height: 100vh;
-  background: rgb(105, 194, 195);
-  background: linear-gradient(
-    141deg,
-    rgba(105, 194, 195, 1) 20%,
-    rgba(190, 221, 205, 1) 47%,
-    rgba(105, 194, 195, 1) 75%
-  );
-  /* background-image: url(./images/techHire.jpg);
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat; */
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-
-.contact-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  max-width: 70%;
-  margin: 0 auto;
-}
-
-.contact-content h3 {
-  font-size: calc(2rem + 0.5vw);
-  padding: 1rem;
-}
-
-.contact-content span {
-  font-weight: 900;
-  font-family: "ciabatta", sans-serif;
-  color: white;
-}
-
-.contactImg-container {
-  width: 30%;
-  object-fit: cover;
-}
-.contactImg-container img {
-  width: 100%;
-  height: 100%;
-}
-
-.contact-badges {
-  margin: 0 auto;
-}
-
-.contact-badges img {
-  width: 200px;
-}
-
-/* Responsive */
-
-@media (max-width: 576px) {
-  .contact-container {
-    max-width: 100%;
-  }
-
-  .contact-badges img {
-    width: 130px;
-  }
-
-  .contactImg-container {
-    width: 70%;
-    object-fit: cover;
-  }
-
-  .contact-content h3 {
-    padding: 1rem;
-  }
-}
-
-/*************************************************************************/
-/******************************* FOOTER *********************************/
-/***********************************************************************/
-.container-footer {
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  flex-direction: column;
-  height: 90vh;
-}
-.footer-logo {
-  width: 40%;
-}
-.footer-content {
-  width: 50%;
-  text-align: center;
-}
-.footer-content ul {
-  list-style-type: none;
-}
-.footer-content ul li {
-  margin: 1rem;
-}
-
-.footer-content i {
-  padding-right: 1rem;
-}
-
-.footer-logo img {
-  width: 100%;
-  height: 100%;
-}
-
-/* Made By*/
-.contact-text {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 0.5rem;
-}
-
-.contact-text i {
-  color: var(--darkBlue);
-  font-size: 1.5rem;
-}
-
-hr {
-  width: 10%;
-  margin: 1rem auto;
-}
-
-.madeBy {
-  background: black;
-  color: white;
-  text-align: center;
-  padding: 1rem;
-}
-
-.madeBy a {
-  color: white;
-}
-
-.madeContent span {
-  color: var(--darkBlue);
-}
-
-.law {
-  text-decoration: none;
-  color: red;
-  padding-top: 1rem;
-}
-
-.back-to-top {
-  position: fixed;
-  bottom: 20px;
-  right: 20px;
-  padding: 10px 15px;
-  background-color: #569b9c;
-  color: white;
-  border-radius: 5px;
-  cursor: pointer;
-  display: none; /* caché par défaut */
-  border: none;
-}
-
-html {
-  scroll-behavior: smooth;
-}
+.cb-tagreel,.cb-tagreel-item,.cb-tagreel-row,.swipe .section-img{position:relative}.cb-tagreel-row,.footer-content,.madeBy,h3{text-align:center}.law,a{text-decoration:none}:root{--darkBlue:#69c2c3;--lightBlue:#beddcd;--hireRed:#c36a69;--black:#000000}*{margin:0;padding:0;box-sizing:border-box}body,html{overflow-x:hidden}body{font-family:"Gill Sans",sans-serif}.contact-content span,span{font-weight:900;font-family:ciabatta,sans-serif}.container,.download,.header,.hero-section,.match,.profil,.swipe{height:100vh}.footer-content ul,.nav-content,ul{list-style-type:none}.section-content p{margin-top:1rem}h2{font-size:calc(1.3rem + 2vw);font-weight:900}h3{font-size:calc(.5rem + 2.5vw)}p{font-size:calc(.8rem + 1.2vw)}span{color:var(--darkBlue)}#diamond{position:fixed;top:60%;left:50%;transform:translate(-50%,-50%) rotate(45deg);width:22vw;height:22vw;background-color:rgba(105,194,195,.09);z-index:-1;transition:.2s}#loader,.contactImg-container img,.footer-logo img,.hero-img img,.logo img,.profil .section-img img{height:100%;width:100%}.cb-tagreel-content{padding:50px 0}.cb-tagreel-items{margin:8px 0;overflow:hidden;cursor:default;background:#000}.cb-tagreel-row{display:flex;white-space:nowrap}.cb-tagreel-item{font-size:calc(1.2rem + 5vw);flex:0 0 33%;padding:1.5rem}.cb-tagreel-item img{width:100%}.cb-tagreel-item.-stroke{color:transparent;text-shadow:none;-webkit-text-stroke:2px rgba(0,0,0,0.2)}.cb-tagreel-item span{position:relative;display:inline-block;z-index:1;color:#fff}@font-face{font-family:ciabatta;src:url("./polices/ciabatta.woff") format("woff");font-weight:700;font-style:normal}@font-face{font-family:"Gill Sans";src:url("./polices/GillSans.woff") format("woff");font-weight:400;font-style:normal}@font-face{font-family:"Gill Sans";src:url("./polices/GillSans.woff") format("woff");font-weight:700;font-style:normal}#loader{position:fixed;top:0;left:0;background:var(--darkBlue);z-index:9999;overflow:hidden;display:flex;justify-content:center;align-items:center}.bar{position:absolute;top:0;bottom:0;width:20%;background:#fff}.bar:first-child{left:0}.bar:nth-child(2){left:20%}.bar:nth-child(3){left:40%}.bar:nth-child(4){left:60%}.bar:nth-child(5){left:80%}.bar:nth-child(6){left:100%}nav{display:flex;align-items:center;justify-content:space-between;padding:.4rem 2rem;transition:background-color .8s;position:fixed;top:0;width:100%;z-index:1000}.logo{width:12%}.nav-scrolled{background:rgb(200 254 255 / 65%);backdrop-filter:blur(10px);-webkit-backdrop-filter:blur(10px);box-shadow:0 4px 6px rgba(0,0,0,.1)}.btnApp-container a{color:#000}.btnApp-container:hover a{background:var(--darkBlue);color:#fff;transition:.5s}.btnApp{padding:.8rem;border-radius:50px;background:0 0;font-size:calc(.6rem + .5vw);font-weight:900;border:1px solid #000}.container-section,.hero-section{display:flex;align-items:center;max-width:75%;margin:0 auto;height:100vh}.hero-img{width:70%;height:auto}.hero-content h1{font-size:calc(1.1rem + 2.8vw)}.container-badges{display:flex;align-items:center;margin-top:2rem;gap:2rem}.badges{width:130px;height:auto}.badges:hover{transition:.5s;transform:scale(1.05)}.swipe .section-img{width:60%;height:auto}.swipe .section-img img:first-child{width:100%;height:auto;z-index:1}.swipe .section-img img:last-child{position:absolute;top:0;left:4.5%;width:90%;height:auto;z-index:2}.match .container-section{gap:2rem;height:100vh}.match .section-img,.profil .section-img{width:80%}.match .section-img img{width:100%;height:90%}.profil .container-section{gap:2rem}@media (max-width:768px){#diamond{position:fixed;top:50%;left:50%;transform:translate(-50%,-50%) rotate(45deg);width:40vw;height:40vw;background-color:rgba(105,194,195,.09);z-index:-1;transition:.2s}h2{font-size:calc(1.1rem + 2vw)}p{font-size:calc(.6rem + 1.2vw)}.hero-section{flex-direction:column;align-items:center;justify-content:center;max-width:80%;padding:2rem}.hero-img{width:40%;height:auto}.hero-content{text-align:center;font-size:2vw;margin-top:2rem}.container-badges{justify-content:center}.badges{width:120px}.container-section{flex-direction:column-reverse;align-items:center;justify-content:center;max-width:85%;padding:2rem}.swipe .section-img{width:35%;height:auto}.section-content{text-align:center;margin-top:1rem}.match .container-section{flex-direction:column;align-items:center;justify-content:center;padding:2rem;gap:0;max-width:85%}.match .section-content{margin-top:0}.match .section-img,.profil .section-img{width:35%}.profil .container-section{max-width:85%}}.contact{height:100vh;background:#69c2c3;background:linear-gradient(141deg,#69c2c3 20%,#beddcd 47%,#69c2c3 75%);display:flex;flex-direction:column;align-items:center;justify-content:center}.contact-container{display:flex;flex-direction:column;align-items:center;max-width:70%;margin:0 auto}.contact-content h3{font-size:calc(2rem + .5vw);padding:1rem}.contact-content span{color:#fff}.contactImg-container{width:30%;object-fit:cover}.contact-badges{margin:0 auto}.contact-badges img{width:200px}@media (max-width:576px){.logo{width:30%}.hero-img{width:80%}.match .section-img,.profil .section-img,.swipe .section-img{width:100%}.contact-container{max-width:100%}.contact-badges img{width:130px}.contactImg-container{width:70%;object-fit:cover}.contact-content h3{padding:1rem}}.container-footer{display:flex;align-items:center;justify-content:space-around;flex-direction:column;height:90vh}.footer-logo{width:40%}.footer-content{width:50%}.footer-content ul li{margin:1rem}.footer-content i{padding-right:1rem}.contact-text{display:flex;align-items:center;justify-content:center;gap:.5rem}.contact-text i{color:var(--darkBlue);font-size:1.5rem}.madeBy,.madeBy a{color:#fff}hr{width:10%;margin:1rem auto}.madeBy{background:#000;padding:1rem}.madeContent span{color:var(--darkBlue)}.law{color:red;padding-top:1rem}.back-to-top{position:fixed;bottom:20px;right:20px;padding:10px 15px;background-color:#569b9c;color:#fff;border-radius:5px;cursor:pointer;display:none;border:none}html{scroll-behavior:smooth}
